Benerin sekalian Tutorial 9

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 *.pyc
 __pycache__
 db.sqlite3
-media
 
 # Backup files
 *.bak 
@@ -135,3 +134,8 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# Remember to never publicly share your keystore.
+# See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
+*.keystore
+*.jks
